services.yaml
apiVersion: v1
kind: Service
metadata:
  name: geospatial-api-service
  namespace: dev
spec:
  selector:
    app: geospatial-api
  ports:
    - protocol: TCP
      name: tcp-geospatial-port
      port: 3000
      targetPort: 3000
