destinationRule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: geospatial-api-destinationrule
spec:
  host: geospatial-api-service.dev.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
